# cmake-gtest-prime

./: CMakeLists.txt  README.md
cmake/: gtest.cmake
include/: Example.h
src/: CMakeLists.txt  Example.cpp  main.cpp
test/: CMakeLists.txt  example.cpp
